--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
     <title>Firefox Relay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -14,7 +13,7 @@
 <body class="font-inter">
     <!-- Put HTML Here -->
     <header>
-        <img id="logo-relay" src="assets/img/logo-relay.png"/>
+        <img id="logo-relay" alt="Firefox Relay logo" src="assets/img/logo-relay.png"/>
         <nav>
             <a id="home" href="#" onclick= "alert('Home!')">Home</a>
             <a id="faq" href="#" onclick="alert('FAQ!')">FAQ</a>
@@ -61,7 +60,7 @@
             <div id="email-box">
                 <div id="address">
                     <h3>sw4wo4v1s@relay.firefox.com <span><i class="far fa-copy grey"></i></span></h3>
-                    <p id="show" class="grey">Show Details <span><i class="fas fa-chevron-down grey"></i></span></h4>
+                    <p id="show" class="grey">Show Details <span><i class="fas fa-chevron-down grey"></i></span></p>
                     <p id="hide" class="grey">Hide Details <span><i class="fas fa-chevron-up grey"></i></span></p>
 
                 </div>
